Implementing BLOCK encryption - part 1.