@@ -64,12 +64,21 @@
 		<gpg.plugin.version>3.2.7</gpg.plugin.version>
 		<central.publishing.plugin.version>0.7.0</central.publishing.plugin.version>
 
+		<!--
+			The apiphanyArgLine property is only used during the build process of the library 
+			and does not affect projects that consume your jar as a dependency. 
+			Each consuming project must define its own JVM arguments and build configurations.
+		-->
 		<apiphanyArgLine>
 			-Djson-builder.to-json.indent-output=true
 			-XX:+EnableDynamicAgentLoading
 			-Xshare:off
 			--add-opens java.base/javax.net.ssl=ALL-UNNAMED
+			--add-opens java.base/javax.crypto=ALL-UNNAMED
+			--add-opens java.base/com.sun.crypto.provider=ALL-UNNAMED
 			--add-opens java.base/sun.security.ssl=ALL-UNNAMED
+			--add-opens java.base/sun.security.internal.spec=ALL-UNNAMED
+			--add-opens jdk.httpserver/sun.net.httpserver=ALL-UNNAMED
 		</apiphanyArgLine>
 	</properties>
 
@@ -336,7 +345,7 @@
 				</executions>
 			</plugin>
 
-  			<!-- Mutation testing -->
+			<!-- Mutation testing -->
 			<!-- mvn org.jacoco:jacoco-maven-plugin:prepare-agent org.pitest:pitest-maven:mutationCoverage -->
 			<!-- mvn -DwithHistory org.jacoco:jacoco-maven-plugin:prepare-agent org.pitest:pitest-maven:mutationCoverage -->
 			<plugin>
@@ -433,7 +442,7 @@
 							</gpgArguments>
 						</configuration>
 					</plugin>
-				
+
 					<!-- Publish to Maven Central -->
 					<!-- https://central.sonatype.org/publish/publish-portal-guide/ -->
 					<!-- For snapshots: https://central.sonatype.org/publish/publish-portal-snapshots/ -->
